--- a/Ch02/02_04/start/index.html
+++ b/Ch02/02_04/start/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<script src="script.js">
+	<script src="bundle.js">
 	</script>
 	<title>Working with Babel</title>
 </head>
