--- a/spread-operator/index.html
+++ b/spread-operator/index.html
@@ -3,7 +3,12 @@
 <head>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.29/browser.js"></script>
 	<script type="text/babel">
+		var cats = ["Tabby", "Siamese", "Persian"];
+		var dogs = ["Golden Retriever", "Pug", "Schnauzer"];
 
+		var animals = ["whale", "Girraffe", ...cats, "Snake", ...dogs, "Coyote"];
+
+        console.log(animals);
 	</script>
 	<title>Spread Operators</title>
 </head>
