--- a/default-function-parameters/index.html
+++ b/default-function-parameters/index.html
@@ -3,8 +3,10 @@
 <head>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.29/browser.js"></script>
 	<script type="text/babel">
-		
-
+		function haveFun(activityName="hiking", time=3) {
+            console.log(`Today I will go ${activityName} for ${time} hours.`);
+        }
+        haveFun();
 	</script>
 	<title>Default Parameters</title>
 </head>
