--- a/arrow-function example/index.html
+++ b/arrow-function example/index.html
@@ -3,7 +3,10 @@
 <head>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.29/browser.js"></script>
 	<script type="text/babel">
-		
+		var studentList = students => console.log(students);
+
+
+        studentList(["Joe", "Mary", "Suzane"]);
 
 
 	
