added class inheritance

--- a/class-inheritance/index.html
+++ b/class-inheritance/index.html
@@ -14,6 +14,19 @@
 			}
 		}
 
+        let coolSkiVan = new Vehicle("Cool ski van", 4);
+
+        coolSkiVan.describeYourself();
+
+        class SemiTruck extends Vehicle{
+            constructor() {
+                super("Semi Truck", 18)
+            }
+        }
+
+        let groceryStoreSemi = new SemiTruck();
+        groceryStoreSemi.describeYourself();
+
 	</script>
 	<title>Classes</title>
 </head>
